scenario-4/dumps/cluster-2/03-xcp-config/gateway.istio-system.transit-backend-gw.yaml
apiVersion: gateway.xcp.tetrate.io/v2
kind: Gateway
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.xcp.tetrate.io/v2","kind":"Gateway","metadata":{"annotations":{},"labels":{"xcp.tetrate.io/gatewayGroup":"transit-backend-gg","xcp.tetrate.io/workspace":"transit-ws"},"name":"transit-backend-gw","namespace":"xcp-system"},"spec":{"http":[{"hostname":"echo.echo-tr.svc.cluster.local","name":"transit-backend","port":8080,"routing":{"rules":[{"route":{"serviceDestination":{"host":"echo-tr/echo.echo-tr.svc.cluster.local","port":80}}}]}}],"workloadSelector":{"labels":{"app" [...]
    xcp.tetrate.io/contentHash: 10ad5d86310c129d87002a9bcd281a79
  creationTimestamp: "2026-05-28T15:04:36Z"
  generation: 1
  labels:
    xcp.tetrate.io/gatewayGroup: transit-backend-gg
    xcp.tetrate.io/workspace: transit-ws
  managedFields:
  - apiVersion: gateway.xcp.tetrate.io/v2
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:xcp.tetrate.io/contentHash: {}
        f:labels:
          .: {}
          f:xcp.tetrate.io/gatewayGroup: {}
          f:xcp.tetrate.io/workspace: {}
      f:spec:
        .: {}
        f:http: {}
        f:workloadSelector:
          .: {}
          f:labels:
            .: {}
            f:app: {}
          f:namespace: {}
    manager: xcpd
    operation: Update
    time: "2026-05-28T15:04:36Z"
  name: transit-backend-gw
  namespace: istio-system
  resourceVersion: "324349"
  uid: b360bc61-c0c3-4929-9a27-f875c66a4619
spec:
  http:
  - hostname: echo.echo-tr.svc.cluster.local
    name: transit-backend
    port: 8080
    routing:
      rules:
      - route:
          serviceDestination:
            host: echo-tr/echo.echo-tr.svc.cluster.local
            port: 80
  workloadSelector:
    labels:
      app: echo-tr-gateway
    namespace: echo-tr
